Views: Don't advance focus in Widgets when the stored focus view is not null.

r443827 introduced behavior where if the initially focused View failed to
receive focus, the Widget would manually advance focus to the first View in the
traversal order. However, this introduced a bug where if there was a stored
focus view in the FocusManager, it would advance the focus anyway.

Fix this by checking the FocusManager's stored focus view as well.

BUG=682157

Review-Url: https://codereview.chromium.org/2684403002
Cr-Commit-Position: refs/heads/master@{#451536}

Former-commit-id: 3033684819d40bb35117382a522ce95c98262de8